Finish renaming platform name

--- a/extra/bulk_email/template.html
+++ b/extra/bulk_email/template.html
@@ -3,13 +3,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
-    <title>{course_title} | IONIS Online Courses</title>
+    <title>{course_title} | IONISx</title>
   </head>
   <body style="font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; background-color: #eef0f1; -webkit-font-smoothing: antialiased;" bgcolor="#eef0f1">
     <div style="max-width: 800px; background-color: #ffffff; margin: 10px auto;">
       <div style="text-align: center; background-color: #303030; padding: 5px 20px;" align="center">
         <a href="https://courses.ionis-group.com">
-          <img src="https://static.courses.ionis-group.com/emails/logo.png" alt="IONIS Online Courses" style="width: 200px; border: 0 none;"></a>
+          <img src="https://static.courses.ionis-group.com/emails/logo.png" alt="IONISx" style="width: 200px; border: 0 none;"></a>
       </div>
       <div style="font-size: 14px; padding: 30px 20px;">
         <h1 style="font-size: 20px; font-weight: normal; color: #2daae1; margin: 0;">{course_title}</h1>
@@ -22,11 +22,11 @@
         <p>
           Vous êtes destinataire de cet email car vous être inscrit au cours
           « <a href="{course_url}" style="color: #eef0f1; text-decoration: none; font-weight: bold;">{course_title}</a> » sur
-          <a href="https://courses.ionis-group.com" style="color: #eef0f1; text-decoration: none; font-weight: bold;">IONIS Online Courses</a>.<br>
+          <a href="https://courses.ionis-group.com" style="color: #eef0f1; text-decoration: none; font-weight: bold;">IONISx</a>.<br>
           Si vous souhaitez cesser de recevoir ces emails, vous pouvez vous désinscrire en suivant <a href="{account_settings_url}" style="color: #eef0f1; text-decoration: none; font-weight: bold;">ce lien</a>.
         </p>
         <p>
-          <b>L’équipe IONIS Online Courses</b>
+          <b>L’équipe IONISx</b>
         </p>
       </div>
     </div>
