Make sure the image in bulk email isn’t cached

--- a/extra/bulk_email/template.html
+++ b/extra/bulk_email/template.html
@@ -9,7 +9,7 @@
     <div style="max-width: 800px; background-color: #ffffff; margin: 10px auto;">
       <div style="text-align: center; background-color: #3ea5ce; padding: 20px;" align="center">
         <a href="https://ionisx.com">
-          <img src="https://static.courses.ionis-group.com/emails/logo.png" alt="IONISx" style="width: 250px; border: 0 none;"></a>
+          <img src="https://static.courses.ionis-group.com/emails/logo.png?0" alt="IONISx" style="width: 250px; border: 0 none;"></a>
       </div>
       <div style="font-size: 14px; padding: 30px 20px;">
         <h1 style="font-size: 20px; font-weight: normal; color: #2daae1; margin: 0;">{course_title}</h1>
